Add and use new variable prometheus_bin_dir.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ prometheus_version: 2.3.2
 
 prometheus_config_dir: /etc/prometheus
 prometheus_db_dir: /var/lib/prometheus
+prometheus_bin_dir: /usr/local/bin
 
 prometheus_web_listen_address: "0.0.0.0:9090"
 prometheus_web_external_url: ''
